cmake_minimum_required(VERSION 3.17)
project(cpp_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_3 main.cpp Person.cpp Person.h Pupil.cpp Pupil.h Worker.cpp Worker.h Teacher.cpp Teacher.h AdministrationPersonal.cpp AdministrationPersonal.h Manager.cpp Manager.h Secretary.cpp Secretary.h Tutor.cpp Tutor.h Class.cpp Class.h Layer.cpp Layer.h School.cpp School.h VecAnalyser.cpp VecAnalyser.h)
